src/objects/Solicitud_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Recibo_de_pago_de_visita_a_independiente__c</fullName>
        <label>Recibo de pago de visita a independiente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referencias_de_proveedores__c</fullName>
        <label>Referencias de proveedores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <label>Regional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_unico_tributario__c</fullName>
        <label>Registro único tributario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reglamento_de_propiedad_horizontal__c</fullName>
        <label>Reglamento de propiedad horizontal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_de_la_revision_CTYL__c</fullName>
        <label>Resultado de la revisión CTYL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positiva</fullName>
                </value>
                <value>
                    <fullName>Negativa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_de_la_revision_en_fonvivienda__c</fullName>
        <label>Resultado de la revisión en fonvivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta con Vivienda</fullName>
                </value>
                <value>
                    <fullName>No cuenta con vivienda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_del_cliente_en_fonvivienda__c</fullName>
        <label>Revisión del cliente en fonvivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_legal__c</fullName>
        <label>Revisión legal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positiva</fullName>
                </value>
                <value>
                    <fullName>Negativa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revisiones_legales_creadas__c</fullName>
        <label>Revisiones legales creadas</label>
        <summaryForeignKey>Revision_legal__c.Solicitud_de_credito_RL__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Seguro_de_incendio_y_terremoto_endosado__c</fullName>
        <label>Seguro de incendio y terremoto endosado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seguro_de_vida_Credifamilia_firma_huella__c</fullName>
        <label>Seguro de vida Credifamilia firma/huella</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seguro_de_vida_endosado__c</fullName>
        <label>Seguro de vida endosado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seguro_incendio_terremoto_Credifamilia__c</fullName>
        <label>Seguro incendio/terremoto Credifamilia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_amortizacion_aprobado__c</fullName>
        <label>Sistema amortización aprobado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion__c</fullName>
        <label>Sistema de amortización</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_con_frech__c</fullName>
        <label>¿Solicitud con FRECH?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Owner:User.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasa__c</fullName>
        <label>Tasa</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tasa_actual_del_credito__c</fullName>
        <label>Tasa actual del crédito</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tasa_de_FRECH__c</fullName>
        <label>Tasa de FRECH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tiempo__c</fullName>
        <formula>FLOOR(

(TODAY()- Fecha_de_desembolso__c)/30

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiempo por mes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_de_credito__c</fullName>
        <label>Tipo de crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Solicitud de crédito</fullName>
                    <default>true</default>
                    <label>Solicitud de crédito</label>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_desembolso__c</fullName>
        <label>Tipo de desembolso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aval y acta de entrega</fullName>
                </value>
                <value>
                    <fullName>Boleta de registro y acta de entrega</fullName>
                </value>
                <value>
                    <fullName>Primera copia y Autorización desembolso</fullName>
                </value>
                <value>
                    <fullName>Oferta vinculante / Autorización de compra de cartera con sello</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <label>Tipo de vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_producto_comercial__c</fullName>
        <label>Tipo de producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compra de cartera hipotecaria</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_registro__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_inmueble__c</fullName>
        <label>Tipo inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casa</fullName>
                </value>
                <value>
                    <fullName>Apartamento</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Torre__c</fullName>
        <label>Torre</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ultimo_extracto_bancario__c</fullName>
        <label>Último extracto bancario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_de_la_comision_de_legalizacion__c</fullName>
        <label>Valor de la comisión de legalización</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_cuota__c</fullName>
        <label>Valor de la cuota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_deuda_actual__c</fullName>
        <label>Valor de la deuda actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_aval_o__c</fullName>
        <label>Valor del avalúo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del crédito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verificaci_n_documental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verificacion_documental_30__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verificación documental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vivienda__c</fullName>
        <label>Vivienda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fotocopia_c_dula_ampliada_al_150__c</fullName>
        <label>Fotocopia cédula ampliada al 150%</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Compra_de_cartera_hipotecaria</fullName>
        <active>true</active>
        <label>Compra de cartera hipotecaria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vivienda_Nueva</fullName>
        <active>true</active>
        <label>Vivienda Nueva</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vivienda_Usada_Mejoramiento</fullName>
        <active>true</active>
        <label>Vivienda Usada / Mejoramiento</label>
    </recordTypes>
    <validationRules>
        <fullName>S001_Registro_checklist_de_solicitud</fullName>
        <active>true</active>
        <description>Cuando una solicitud de crédito está en estado radicada se debe diligenciar toda la sección: Checklist de documentos para solicitud de créditos.</description>
        <errorConditionFormula>AND( 

RecordType.Name =&quot;Vivienda Nueva&quot;,
RecordType.Name =&quot;Vivienda Usada / Mejoramiento&quot;,
ISPICKVAL(Estado_de_la_solicitud__c,&quot;Radicada&quot;),

OR(
ISPICKVAL( Cliente_con_visita__c,&quot;&quot;),
ISPICKVAL( Formato_de_vinculacion_diligenciado__c,&quot;&quot;),
ISPICKVAL( fotocopia_c_dula_ampliada_al_150__c,&quot;&quot;),
ISPICKVAL( CIFIN_en_carpeta_virtual__c,&quot;&quot;),
ISPICKVAL( Data_en_carpeta_virtual__c,&quot;&quot;),
ISPICKVAL( Paz_y_salvo_de_moras_embargos__c,&quot;&quot;),
ISPICKVAL( Certificado_de_ingresos_y_retenciones_de__c,&quot;&quot;),
ISPICKVAL( Solicitud_con_frech__c,&quot;&quot;),
ISPICKVAL( Certificado_vinculacion_a_empresa_transp__c,&quot;&quot;),
ISPICKVAL( Estados_financieros_2_ultim__c,&quot;&quot;),
ISPICKVAL( Contratos_de_arrendamientos__c,&quot;&quot;),
ISPICKVAL( Certificado_tradicion_y_libertad__c,&quot;&quot;),
ISPICKVAL( Certificado_de_otros_ingresos__c,&quot;&quot;),
ISPICKVAL( Referencias_de_proveedores__c,&quot;&quot;),
ISPICKVAL( Carta_laboral_con_especificaciones__c,&quot;&quot;),
ISPICKVAL( Documento_afiliacion_al_SGSS_salud_pensi__c,&quot;&quot;),
ISPICKVAL( Comprobante_pago_pension_ultimos_2_meses__c,&quot;&quot;),
ISPICKVAL( Comprobantes_de_nomina_ultimos_2_meses__c,&quot;&quot;),
ISPICKVAL( Certificado_de_camara_de_comercio__c,&quot;&quot;),
ISPICKVAL( Registro_unico_tributario__c,&quot;&quot;),
ISPICKVAL( Extractos_bancarios_ultimos_tres_meses__c,&quot;&quot;),
ISPICKVAL( Documento_de_afiliacion_arp__c,&quot;&quot;),
ISPICKVAL( Documento_afiliac_caja_de_compensacion__c,&quot;&quot;),
ISPICKVAL( Historia_laboral_de_fondo_de_pensiones__c,&quot;&quot;),
ISPICKVAL( Recibo_de_pago_de_visita_a_independiente__c,&quot;&quot;),
ISPICKVAL( Carta_de_cliente_con_frech__c,&quot;&quot;),
ISPICKVAL( Declaracion_renta_o_carta_no_declarante__c,&quot;&quot;),
ISPICKVAL( Fotocopia_tarjeta_de_propiedad_vehiculo__c,&quot;&quot;),
ISPICKVAL( Extracto_bancario_factura_inscripcion_TV__c,&quot;&quot;),
ISPICKVAL( Otros_documentos__c,&quot;&quot;)
         
))</errorConditionFormula>
        <errorMessage>SOL-001  Si va a actualizar la solicitud a &quot;Radicada&quot; , los campos de la sección check list de documentos para solicitud de crédito deben estar diligenciados con un &quot;Si&quot; o un &quot;No&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S002_Valida_estado_Radicado</fullName>
        <active>true</active>
        <description>Valida que un Comercial no pueda actualizar el estado de la solicitud a Digitalizada, ni a Paz y salvo generado.</description>
        <errorConditionFormula>AND ( 

$Profile.Id = &quot;00eo0000000TUb5&quot;,
ISPICKVAL (  Estado_de_la_solicitud__c ,&quot;Digitalizada&quot;),
ISPICKVAL (  Estado_de_la_solicitud__c ,&quot;Paz y salvo generado&quot;)

)</errorConditionFormula>
        <errorMessage>SOL-002. Perfil no autorizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S003_Campo_cuales_checklist_documentos</fullName>
        <active>true</active>
        <description>Valida que si en el checklist de documentos se marca como &quot;Si&quot; el campo otros documentos, deben especificar cuales son.</description>
        <errorConditionFormula>AND ( 
    ISPICKVAL ( Otros_documentos__c , &quot;Si&quot;), 
    ISBLANK( Cuales__c)

)</errorConditionFormula>
        <errorMessage>SOL-003. Si la solicitud tiene otros documentos debe especificar cuales son.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S004_Documento_afiliacion_ARP_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea &quot;Digitalizada&quot;, si el campo Documento de afiliación ARP es igual a &quot;Si&quot;, el campo de la verificación documental del documento de afiliación debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Documento_de_afiliacion_arp__c, &quot;Si&quot;),
  Verificacion_documental10__c=True,
  Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado10__c</errorDisplayField>
        <errorMessage>SOL-004. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S005_Documento_afiliacion_caja_igual_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea &quot;Digitalizada&quot;, si el campo Documento de afiliación cada de compensación es igual a &quot;Si&quot;, se diligencie el check de digitalizado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Documento_afiliac_caja_de_compensacion__c, &quot;Si&quot;),
   Digitalizado11__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado11__c</errorDisplayField>
        <errorMessage>SOL-005. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S006_Documento_afiliacion_SGSS_igual_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea &quot;Digitalizada&quot;, si el campo &quot;Documento de afiliación al SGSS salud/pensi&quot; igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Documento_afiliacion_al_SGSS_salud_pensi__c, &quot;Si&quot;),
   Digitalizado14__c = FALSE, 
    Migrado__c = False
)</errorConditionFormula>
        <errorDisplayField>Digitalizado14__c</errorDisplayField>
        <errorMessage>SOL-006. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S007_Carta_de_cliente_con_frech_igual_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Carta de cliente con frech&quot; igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Carta_de_cliente_con_frech__c, &quot;Si&quot;),
   Digitalizado6__c = FALSE, 
   Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado6__c</errorDisplayField>
        <errorMessage>SOL-007. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S008_Carta_laboral_con_especi_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Carta laboral con especificaciones&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Carta_laboral_con_especificaciones__c , &quot;Si&quot;),
   Digitalizado15__c = FALSE, 
   Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado15__c</errorDisplayField>
        <errorMessage>SOL-008. Si va a actualizar a estado digitalizado debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S009_Cedula_ampliada_al_150_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Fotocopia cédula ampliada al 150&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL(  fotocopia_c_dula_ampliada_al_150__c , &quot;Si&quot;),
     Digitalizado21__c = FALSE, 
      Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado21__c</errorDisplayField>
        <errorMessage>SOL-009. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S010_Certificado_vinculacion_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Certificado vinculación a empresa transp&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Certificado_vinculacion_a_empresa_transp__c, &quot;Si&quot;),
   Digitalizado28__c = FALSE, 
    Migrado__c = False
)</errorConditionFormula>
        <errorDisplayField>Digitalizado28__c</errorDisplayField>
        <errorMessage>SOL-010. Si va a actualizar a estado digitalizado debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S011_Certificado_otros_ingresos_igual_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Certificado de otros ingresos&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Certificado_de_otros_ingresos__c, &quot;Si&quot;),
   Digitalizado19__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado19__c</errorDisplayField>
        <errorMessage>SOL-011. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S012_Certificado_camara_comer_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Certificado de cámara de comercio&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Certificado_de_camara_de_comercio__c , &quot;Si&quot;),
   Digitalizado9__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado9__c</errorDisplayField>
        <errorMessage>SOL-012. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S013_Contratos_de_arrendamiento_igual_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Contratos de arrendamiento&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Contratos_de_arrendamientos__c, &quot;Si&quot;),
   Digitalizado24__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado24__c</errorDisplayField>
        <errorMessage>SOL-013. Si va a actualizar a estado digitalizado debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S014_Certificado_de_ingreso_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Certificado de ingresos y retenciones&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Certificado_de_ingresos_y_retenciones_de__c, &quot;Si&quot;),
   Digitalizado27__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado27__c</errorDisplayField>
        <errorMessage>SOL-014. Si va a actualizar a estado digitalizado debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S015_Certificado_tradicion_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Certificado de tradición y libertad&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Certificado_tradicion_y_libertad__c, &quot;Si&quot;),
   Digitalizado22__c = FALSE, 
    Migrado__c = False
)</errorConditionFormula>
        <errorDisplayField>Digitalizado22__c</errorDisplayField>
        <errorMessage>SOL-015. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S016_CIFIN_en_carpeta_virtual_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;CIFIN en carpeta virtual&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( CIFIN_en_carpeta_virtual__c , &quot;Si&quot;),
     Digitalizado23__c = FALSE, 
      Migrado__c = False
  
)</errorConditionFormula>
        <errorDisplayField>Digitalizado23__c</errorDisplayField>
        <errorMessage>SOL-016. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S017_Comprobante_pago_pension_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Comprobante pago pensión últimos 2 meses&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Comprobante_pago_pension_ultimos_2_meses__c, &quot;Si&quot;),
   Digitalizado12__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado12__c</errorDisplayField>
        <errorMessage>SOL-017. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S018_Comprobantes_de_nomina_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Comprobantes de nómina últimos 2 meses&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Comprobantes_de_nomina_ultimos_2_meses__c , &quot;Si&quot;),
   Digitalizado13__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado13__c</errorDisplayField>
        <errorMessage>SOL-018. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S019_Data_en_carpeta_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo Data en carpeta virtual&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Data_en_carpeta_virtual__c, &quot;Si&quot;),
     Digitalizado20__c = FALSE, 
      Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado20__c</errorDisplayField>
        <errorMessage>SOL-019. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S020_Declaracion_renta_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Declaración renta o carta no declarante&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL(  Declaracion_renta_o_carta_no_declarante__c , &quot;Si&quot;),
   Digitalizado3__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado3__c</errorDisplayField>
        <errorMessage>SOL-020. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>S021_Extractos_bancarios_igual_a_Si</fullName>
        <active>true</active>
        <description>Valida que cuando el estado de la solicitud sea Digitalizada, y el campo &quot;Extractos bancarios últimos tres meses&quot; sea igual a &quot;Si&quot;, el check de dilitalizado debe estar diligenciado.</description>
        <errorConditionFormula>AND( 
  ISPICKVAL( Estado_de_la_solicitud__c , &quot;Digitalizada&quot;),
  ISPICKVAL( Extractos_bancarios_ultimos_tres_meses__c , &quot;Si&quot;),
   Digitalizado5__c = FALSE, 
    Migrado__c = False 
)</errorConditionFormula>
        <errorDisplayField>Digitalizado5__c</errorDisplayField>
        <errorMessage>SOL-021. Si va a actualizar a estado Digitalizada debe actualizar los campos verificación documental y digitalizado.</errorMessage>
    </validationRules>
</CustomObject>